force-app/main/default/objects/RSI_Billing__c/RSI_Billing__c.object-meta.xml
<CustomObject>
    <label>Billing</label>
    <nameField>
        <displayFormat>BN-{000000}</displayFormat>
        <label>Billing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>