force-app/main/default/objects/RSI_Billing__c/fields/Additional_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Additional_Surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Surcharge?</label>
    <type>Checkbox</type>
</CustomField>