force-app/main/default/objects/RSI_Billing__c/fields/NBA_Overdue_Date__c.field-meta.xml
<CustomField>
    <fullName>NBA_Overdue_Date__c</fullName>
    <formula>(RSI_Effective_Date__c -  TODAY() ) &lt;  15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBA Overdue Date</label>
    <type>Checkbox</type>
</CustomField>