force-app/main/default/objects/RSI_Billing__c/fields/RS_Id_Link__c.field-meta.xml
<CustomField>
    <fullName>RS_Id_Link__c</fullName>
    <formula>&quot;/&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RS_Id_Link</label>
    <type>Text</type>
</CustomField>