force-app/main/default/objects/RSI_Billing__c/fields/RS_Policy_ObjectFormula__c.field-meta.xml
<CustomField>
    <fullName>RS_Policy_ObjectFormula__c</fullName>
    <formula>if( RSI_Policy__r.Id &lt;&gt;&apos;&apos;,&quot;/&quot; +  RSI_Policy__r.Id ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RS_Policy_ObjectFormula</label>
    <type>Text</type>
</CustomField>