force-app/main/default/objects/RSI_Billing__c/fields/RSI_Customer__c.field-meta.xml
<CustomField>
    <fullName>RSI_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>