force-app/main/default/objects/RSI_Billing__c/fields/RSI_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>RSI_Effective_Date__c</fullName>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>