force-app/main/default/objects/RSI_Billing__c/fields/RSI_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>RSI_Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>