force-app/main/default/objects/RSI_Billing__c/fields/RSI_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>RSI_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>Auto pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>