force-app/main/default/objects/RSI_Billing__c/fields/RSI_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>RSI_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Not Done</fullName>
                <isActive>false</isActive>
                <label>Not Done</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>