force-app/main/default/objects/RSI_Billing__c/fields/Surcharge_Details__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Details__c</fullName>
    <label>Surcharge Details</label>
    <type>TextArea</type>
</CustomField>