force-app/main/default/objects/RSI_Billing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RSI_Policy__c</columns>
    <columns>RSI_Customer__c</columns>
    <columns>RSI_Effective_Date__c</columns>
    <columns>RSI_Payment_Status__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>